@@ -190,8 +190,8 @@ module BinData
 
       # Use #seek and #pos on seekable streams
       module SeekableStream
-        # Returns the current offset of the io stream.  The exact value of
-        # the offset when reading bitfields is not defined.
+        # Returns the current offset of the io stream.  Offset will be rounded
+        # up when reading bitfields.
         def offset
           raw_io.pos - @initial_pos
         end
@@ -225,8 +225,8 @@ module BinData
 
       # Manually keep track of offset for unseekable streams.
       module UnSeekableStream
-        # Returns the current offset of the io stream.  The exact value of
-        # the offset when reading bitfields is not defined.
+        # Returns the current offset of the io stream.  Offset will be rounded
+        # up when reading bitfields.
         def offset
           @read_count ||= 0
         end
@@ -284,6 +284,8 @@ module BinData
         @wval    = 0
         @wendian = nil
 
+        @write_count = 0
+
         @bytes_remaining = nil
       end
 
@@ -305,6 +307,12 @@ module BinData
         ensure
           @bytes_remaining = prev
         end
+      end
+
+      # Returns the current offset of the io stream.  Offset will be rounded
+      # up when writing bitfields.
+      def offset
+        @write_count + (@wnbits > 0 ? 1 : 0)
       end
 
       # Writes the given string of bytes to the io stream.
@@ -394,6 +402,7 @@ module BinData
           @bytes_remaining -= data.size
         end
 
+        @write_count += data.size
         @raw_io.write(data)
       end
 
