@@ -5,6 +5,7 @@
 * #eval_parameters can now call private methods.  Requested by Ole Rasmussen.
 * Can now determine state of :onlyif fields.  Requested by Ole Rasmussen.
 * Renamed #offset to #abs_offset for clarity.  #offset is now deprecated.
+* Support :byte_align for fields in structs.  Requested by Igor Yamolov.
 
 == Version 1.8.2 (2014-02-02)
 
